fixed csv header bug, token overlfow fix because it was breaking when n got too big, and we need to handle up to 30 tokens, removed debug extended timeouts

--- a/_static/global/styles/main.css
+++ b/_static/global/styles/main.css
@@ -155,7 +155,7 @@ html {
 /*officer below*/
 
 .officer-info-container {
-    width: 650px;
+    width: 700px;
     margin: auto;
     padding: 10px;
 }
